# netshaper

./: Cargo.toml  README.md  case.lbrn2  main.rs  netshaper.py  netshaper.service  requirements.txt  ui.html
python/: README.md  display.py  netshaper-display.service
rust/: Cargo.toml  main.rs  netshaper.service
