[package]
name = "netshaper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "netshaper"
path = "src/main.rs"

[dependencies]
# HTTP server (zero-dependency, perfect for embedded)
tiny-http = "0.12"

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OLED display (SSD1306 / SSD1305 / SSD1315 — same driver)
ssd1306 = "0.8"
embedded-graphics = "0.8"
linux-embedded-hal = "0.4"

[profile.release]
opt-level = "z"   # minimise binary size on the Pi
strip = true
